@@ -11,6 +11,7 @@ kdebindings (4:4.4.5-3) UNRELEASED; urgency=low
     Even if python-kde4 still provides python2.5 bindings, Python 2.5 is no
     longer a default and hence it is not a pre-requisite for the package to be
     useful on standard Debian install.
+  * Support DEB_BUILD_OPTIONS=parallel=X properly.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 09 Aug 2010 22:43:03 +0200
 
